[tool.poetry]
name = "odbg"
version = "0.1.0"
description = "Open Data Badger"
authors = ["Ashim Mahara <ashim@shivatech.dev>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tqdm = "^4.66.4"
openai = "^1.35.6"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
tiktoken = "^0.7.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
